--- a/react/src/assets/css/App.css
+++ b/react/src/assets/css/App.css
@@ -22,7 +22,7 @@
 .navBar .bs {
     padding: 0 8px 0 8px;
     text-align: center;
-    width: 90px;
+    width: 100px;
 }
 .navBar div img{
     width: 20px;
@@ -48,8 +48,8 @@
     z-index: 9;
     top: 60px;
     right: 16%;
-    width: 90px;
-    padding: 0;
+    width: 100px;
+    padding: 2px;
     /* height: 100%;
     width: 100%; */
     background-color: #1C1C1C;
